--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -42,7 +42,7 @@ $text-large:3.2rem;
 
 $text-h1: 7rem;
 $text-h2-sm:4rem;
-$tex-h2:5rem;
+$text-h2:5rem;
 $text-h1-sm: 6.1rem;
  
 $z-default-layer:0;
