--- a/sass/components/_page-notch.scss
+++ b/sass/components/_page-notch.scss
@@ -21,7 +21,7 @@
     &__heading{
         display:inline-block;
         text-align: center;
-        font-size:$tex-h2;
+        font-size:$text-h2;
         text-transform: uppercase;
         letter-spacing:8px;
         padding-left:8px;
