--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,12 +7,35 @@
 }
 
 :root{
-    font-size:62.5%;
+    font-size:62.5%; //1rem = 10px
+
+    @include respond('big-desktop'){
+        font-size:75%; //1rem = 12px
+    }
+    @include respond('big-laptop'){
+        font-size: 62.5%; //1rem = 10px
+    }
+    @include respond('tab-land'){
+        font-size: 56.25%; //1rem = 9px
+    }
+    @include respond('laptop'){
+        font-size: 56.25%; //1rem = 10px
+    }
+    @include respond('tab-port'){
+        font-size: 50%; //1rem = 8px
+    }
+    @include respond('tab-generic'){
+        font-size:50%; //1rem = 8px
+    }
+    @include respond('phone'){
+        font-size: 56.25%; //1rem = 10px
+    }
 }
 
 body{
     box-sizing: border-box;
     font-family: 'Morganite';
+
     &>*{
         position:relative;
     }
