--- a/sass/components/_content-items.scss
+++ b/sass/components/_content-items.scss
@@ -5,6 +5,10 @@
     align-items: center;
     flex-wrap: nowrap;
 
+    @include respond('phone'){
+        flex-direction: column;
+    }
+
     &__item{
         //flex-grow:1;
         flex-basis:calc(1/2*100%);
@@ -14,6 +18,18 @@
         }
         &:nth-child(even){
             padding-left:2.5rem;
+        }
+
+        @include respond('phone'){
+            &:nth-child(odd),
+            &:nth-child(even){
+                padding-right:0rem;
+                padding-left: 0rem;
+            }
+
+            &:not(:last-child){
+                margin-bottom:4rem;
+            }
         }
     }
 
@@ -26,7 +42,9 @@
     &__image{
         height: 30rem;
         width:100%;
-        //height: auto;
+        @include respond('tab-generic'){
+            height: 22rem;
+        }
     }
 
     &__text{
@@ -57,6 +75,12 @@
         font-weight: 500;
         color:$color-light;
         letter-spacing: 3px;
-        padding-left:7rem;
+        @include respond('tab-land'){
+            font-size:$text-min;
+        }
+        @include respond('tab-generic'){
+            letter-spacing: 2px;
+            font-size: $text-small-med-med;
+        }
     }
 }
