--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -5,6 +5,10 @@
     grid-row-gap: 4.5rem;
     grid-column-gap:4rem;
 
+    @include respond('phone'){
+        grid-template-columns: [start] repeat(8, [col] 1fr [col]) [end];
+        grid-template-rows: repeat(12, 12rem);
+    }
     &__item{
         position:relative;
     }
