--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -30,6 +30,9 @@
             @include respond('phone'){
                 height: 6rem;
             }
+            @include respond('phone-med'){
+                height: 5rem;
+            }
         }
     }
 }
