--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,12 @@ They always point to the browser default font size.
   @media only screen and (max-width: 37.5em) {
     :root {
       font-size: 56.25%; } }
+  @media only screen and (max-width: 29em) {
+    :root {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 25em) {
+    :root {
+      font-size: 53.3%; } }
 
 body {
   box-sizing: border-box;
@@ -137,7 +143,11 @@ footer.footer {
   font-size: 7rem; }
   @media only screen and (max-width: 37.5em) {
     .heading-primary {
+      letter-spacing: 4px;
       font-size: 5rem; } }
+  @media only screen and (max-width: 29em) {
+    .heading-primary {
+      font-size: 4.5rem; } }
 
 .h-1 {
   color: #232427;
@@ -150,6 +160,10 @@ footer.footer {
     .h-1 {
       font-size: 5rem;
       letter-spacing: 6px; } }
+  @media only screen and (max-width: 29em) {
+    .h-1 {
+      font-size: 4.5rem;
+      letter-spacing: 3px; } }
 
 .h-2 {
   display: inline-block;
@@ -187,6 +201,10 @@ footer.footer {
     letter-spacing: 3.6px;
     padding-bottom: .1rem;
     font-weight: normal; }
+    @media only screen and (max-width: 75em) {
+      .text--top {
+        letter-spacing: 2.5px;
+        font-size: 1.6rem; } }
   .text--main {
     color: #FFF7E1;
     font-size: 2.4rem;
@@ -261,6 +279,9 @@ footer.footer {
 
 .u-padding-bottom-med {
   padding-bottom: 15rem !important; }
+  @media only screen and (max-width: 29em) {
+    .u-padding-bottom-med {
+      padding-bottom: 7rem !important; } }
 
 .u-padding-top-btm-med {
   padding: 5rem 0 !important; }
@@ -360,6 +381,10 @@ footer.footer {
         position: relative;
         left: 50%;
         transform: translateX(-50%); } }
+    @media only screen and (max-width: 29em) {
+      .header__background--phone {
+        height: 50rem;
+        transform: translate(-50%, -10%) scale(1.1); } }
   .header__logo-wave {
     position: absolute;
     top: 0;
@@ -373,6 +398,10 @@ footer.footer {
     @media only screen and (max-width: 37.5em) {
       .header__logo-wave {
         height: 28rem; } }
+    @media only screen and (max-width: 29em) {
+      .header__logo-wave {
+        height: 22rem;
+        left: -3rem; } }
   .header__overflow-container {
     overflow: hidden; }
   .header__green-wave {
@@ -416,18 +445,21 @@ footer.footer {
     @media only screen and (max-width: 90em) {
       .header__text-box {
         margin-left: 10rem; } }
-    @media only screen and (max-width: 64em) {
-      .header__text-box {
-        margin-left: 22rem; } }
     @media only screen and (max-width: 75em) {
       .header__text-box {
         margin-left: 0;
         text-align: center;
         max-width: none;
         padding-bottom: 5rem; } }
+    @media only screen and (max-width: 64em) {
+      .header__text-box {
+        margin-left: 2rem; } }
     @media only screen and (max-width: 37.5em) {
       .header__text-box {
-        padding-bottom: 2rem; } }
+        padding-bottom: 4rem; } }
+    @media only screen and (max-width: 29em) {
+      .header__text-box {
+        padding-bottom: 6rem; } }
   .header .heading-primary {
     max-width: 20rem;
     padding-bottom: 3rem; }
@@ -467,6 +499,9 @@ footer.footer {
     @media only screen and (max-width: 37.5em) {
       .header__offerings {
         padding-top: 1rem; } }
+    @media only screen and (max-width: 29em) {
+      .header__offerings {
+        padding-bottom: 1rem; } }
 
 .navigation__list {
   display: flex;
@@ -517,6 +552,9 @@ footer.footer {
       @media only screen and (max-width: 48em) {
         .footer__wave--top {
           height: 25rem; } }
+      @media only screen and (max-width: 29em) {
+        .footer__wave--top {
+          height: 18rem; } }
     .footer__wave--bottom {
       bottom: 0;
       right: 0; }
@@ -526,6 +564,9 @@ footer.footer {
       @media only screen and (max-width: 48em) {
         .footer__wave--bottom {
           height: 20rem; } }
+      @media only screen and (max-width: 29em) {
+        .footer__wave--bottom {
+          height: 15rem; } }
   .footer-content {
     position: relative;
     z-index: 20;
@@ -537,12 +578,27 @@ footer.footer {
         padding: 6rem 0 8rem 0; } }
     .footer-content > * {
       flex-basis: calc(1/2*100%); }
+    @media only screen and (max-width: 37.5em) {
+      .footer-content {
+        justify-content: center;
+        align-items: start;
+        flex-direction: column-reverse;
+        padding: 10rem 7rem 2rem 7rem; }
+        .footer-content > * {
+          width: 100%; } }
+    @media only screen and (max-width: 29em) {
+      .footer-content {
+        padding: 4rem 3rem 2rem 3rem; } }
   .footer__logo-box {
     text-align: right;
     padding-right: 4rem; }
     @media only screen and (max-width: 48em) {
       .footer__logo-box {
         padding-top: 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .footer__logo-box {
+        text-align: left;
+        margin-top: 3rem; } }
   .footer__logo {
     margin-right: 5rem; }
     @media only screen and (max-width: 48em) {
@@ -553,6 +609,9 @@ footer.footer {
     flex-direction: row;
     list-style-type: none;
     padding-left: 1rem; }
+    @media only screen and (max-width: 37.5em) {
+      .footer__list {
+        justify-content: space-between; } }
     .footer__list--standalone {
       padding-left: 0; }
       .footer__list--standalone .footer__list-item:first-child {
@@ -564,9 +623,18 @@ footer.footer {
       align-items: start; }
       .footer__list-section:not(:last-child) {
         margin-right: 5rem; }
+        @media only screen and (max-width: 29em) {
+          .footer__list-section:not(:last-child) {
+            margin-right: 2rem; } }
     .footer__list-item {
       display: block;
       padding: 1rem .5rem; }
+      @media only screen and (max-width: 37.5em) {
+        .footer__list-item {
+          padding: .5rem .5rem; } }
+      @media only screen and (max-width: 29em) {
+        .footer__list-item {
+          padding: .5rem .5rem; } }
   .footer__link, .footer__text {
     color: #FFF7E1;
     font-size: 2rem;
@@ -576,6 +644,12 @@ footer.footer {
     text-decoration: none; }
     .footer__link:hover {
       color: #fa492d; }
+  @media only screen and (max-width: 29em) {
+    .footer__social-media {
+      width: 3.4rem; } }
+  @media only screen and (max-width: 22.5em) {
+    .footer__social-media {
+      width: 2.7rem; } }
   .footer__button.footer__link {
     font-size: 2rem;
     letter-spacing: 3px;
@@ -615,6 +689,9 @@ footer.footer {
       @media only screen and (max-width: 75em) {
         .section-projects__overflow-container--wave {
           top: -15%; } }
+      @media only screen and (max-width: 37.5em) {
+        .section-projects__overflow-container--wave {
+          top: -10%; } }
   @media only screen and (max-width: 90em) {
     .section-projects__wave {
       width: 54rem; } }
@@ -633,10 +710,14 @@ footer.footer {
         width: 100rem; } }
     @media only screen and (max-width: 48em) {
       .section-projects .gallery {
-        max-width: 90rem; } }
+        max-width: 90rem;
+        max-width: 90vw; } }
     @media only screen and (max-width: 37.5em) {
       .section-projects .gallery {
-        max-width: 60rem; } }
+        max-width: 90vw; } }
+    @media only screen and (max-width: 29em) {
+      .section-projects .gallery {
+        padding-bottom: 0rem; } }
   .section-projects .gallery__item--1 {
     grid-column: start / col 3;
     grid-row: 1 / 7; }
@@ -702,10 +783,17 @@ footer.footer {
   @media only screen and (max-width: 64em) {
     .section-blog {
       padding: 4rem 5rem 5rem 5rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .section-blog {
+      padding: 4rem 2rem 5rem 2rem;
+      overflow-x: clip; } }
   .section-blog__wave {
     position: absolute;
     top: 0;
     right: 0; }
+    @media only screen and (max-width: 37.5em) {
+      .section-blog__wave {
+        width: 25rem; } }
   .section-blog__bottom-wave {
     position: absolute;
     bottom: 0;
@@ -731,7 +819,13 @@ footer.footer {
 
 .section-form {
   background-color: #FFF7E1;
-  padding: 16rem 0 0 0; }
+  padding-top: 16rem; }
+  @media only screen and (max-width: 37.5em) {
+    .section-form {
+      padding-top: 10rem; } }
+  @media only screen and (max-width: 29em) {
+    .section-form {
+      padding-top: 6rem; } }
   .section-form .form {
     max-width: 140rem;
     margin: -3rem auto 0 auto; }
@@ -1037,6 +1131,9 @@ footer.footer {
   @media only screen and (max-width: 37.5em) {
     .menu__logo-img {
       height: 6rem; } }
+  @media only screen and (max-width: 29em) {
+    .menu__logo-img {
+      height: 5rem; } }
 
 .composition {
   position: relative;
@@ -1047,6 +1144,9 @@ footer.footer {
   @media only screen and (max-width: 37.5em) {
     .composition {
       height: 48rem; } }
+  @media only screen and (max-width: 29em) {
+    .composition {
+      height: 42rem; } }
   .composition:not(:hover) .composition__item--2 {
     transform: translateY(-5rem); }
     @media only screen and (max-width: 75em) {
@@ -1077,6 +1177,10 @@ footer.footer {
       .composition__item {
         width: 16rem;
         height: 44rem; } }
+    @media only screen and (max-width: 29em) {
+      .composition__item {
+        width: 15rem;
+        height: 42rem; } }
     .composition__item:hover {
       z-index: 30;
       transform: translateY(-5rem) scale(1.1);
@@ -1187,6 +1291,10 @@ footer.footer {
     .gallery {
       grid-template-columns: [start] repeat(8, [col] 1fr [col]) [end];
       grid-template-rows: repeat(12, 12rem); } }
+  @media only screen and (max-width: 29em) {
+    .gallery {
+      grid-row-gap: 2rem;
+      grid-column-gap: 3rem; } }
   .gallery__item {
     position: relative; }
   .gallery__description {
@@ -1206,12 +1314,18 @@ footer.footer {
     filter: drop-shadow(0 1px 0.4rem #232427); }
     .gallery__image:hover {
       transform: scale(1.04); }
+    @media only screen and (max-width: 29em) {
+      .gallery__image {
+        height: 80%; } }
   .gallery__button {
     position: absolute;
     bottom: 10%;
     right: 0;
     transform: translateX(10%);
     transition: background-color .2s; }
+    @media only screen and (max-width: 29em) {
+      .gallery__button {
+        bottom: 25%; } }
     .gallery__button:hover {
       background-color: #2f2c96; }
     .gallery__button .button__text {
@@ -1368,7 +1482,7 @@ footer.footer {
       flex-basis: 100%; }
     @media only screen and (max-width: 37.5em) {
       .form__group {
-        width: 80%;
+        width: 90%;
         margin-top: 3rem; } }
   .form__input {
     font-family: inherit;
