--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,11 @@
         letter-spacing: 6px;
         font-size: $text-h1;
         @include respond('phone'){
+            letter-spacing: 4px;
             font-size: $text-h2;
+        }
+        @include respond('phone-med'){
+            font-size: $text-h2-med;
         }
     }
 }
@@ -23,6 +27,10 @@
     @include respond('tab-land'){
         font-size:$text-h2;
         letter-spacing: 6px;
+    }
+    @include respond('phone-med'){
+        font-size:$text-h2-med;
+        letter-spacing: 3px;
     }
 }
 
@@ -69,6 +77,10 @@
         letter-spacing: 3.6px;
         padding-bottom:.1rem;
         font-weight: normal;
+        @include respond('tab-land'){
+            letter-spacing: 2.5px;
+            font-size:$text-small-med-med;
+        }
     }
     &--main{
         color: $color-light;
