--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -9,6 +9,10 @@
         grid-template-columns: [start] repeat(8, [col] 1fr [col]) [end];
         grid-template-rows: repeat(12, 12rem);
     }
+    @include respond('phone-med'){
+        grid-row-gap: 2rem;
+        grid-column-gap:3rem;
+    }
     &__item{
         position:relative;
     }
@@ -34,6 +38,10 @@
         &:hover{
             transform:scale(1.04);
         }
+        @include respond('phone-med'){
+            height: 80%;
+        }
+
     }
 
     &__button{
@@ -42,6 +50,10 @@
         right:0;
         transform:translateX(10%);
         transition:background-color .2s;
+
+        @include respond('phone-med'){
+            bottom:25%;
+        }
 
         &:hover{
             background-color:$color-purple;
