--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -25,6 +25,9 @@
             @include respond('tab-generic'){
                 height: 25rem;
             }
+            @include respond('phone-med'){
+                height: 18rem;
+            }
         }
         &--bottom{
             bottom:0;
@@ -34,6 +37,9 @@
             }
             @include respond('tab-generic'){
                 height: 20rem;
+            }
+            @include respond('phone-med'){
+                height: 15rem;
             }
         }
     }
@@ -52,6 +58,21 @@
         &>*{
             flex-basis:calc(1/2*100%);
         }
+
+        @include respond('phone'){
+            justify-content: center;
+            align-items: start;
+            flex-direction: column-reverse;
+
+            padding:10rem 7rem 2rem 7rem;    
+
+            &>*{
+                width:100%
+            }
+        }
+        @include respond('phone-med'){
+            padding:4rem 3rem 2rem 3rem;
+        }
     }
 
     &__logo-box{
@@ -59,6 +80,10 @@
         padding-right:4rem; //connected
         @include respond('tab-generic'){
             padding-top:2rem;
+        }
+        @include respond('phone'){
+            text-align: left;
+            margin-top:3rem;
         }
     }
     &__logo{
@@ -72,6 +97,10 @@
         flex-direction: row;
         list-style-type: none;
         padding-left:1rem; //connected
+
+        @include respond('phone'){
+            justify-content: space-between;
+        }
 
         &--standalone{
             padding-left:0;
@@ -89,12 +118,21 @@
 
             &:not(:last-child){
                 margin-right:5rem;
+                @include respond('phone-med'){
+                    margin-right:2rem;
+                }
             }
         }
 
         &-item{
             display:block;
             padding:1rem .5rem;
+            @include respond('phone'){
+                padding:.5rem .5rem;
+            }
+            @include respond('phone-med'){
+                padding:.5rem .5rem;
+            }
         }
     }
     &__link,
@@ -108,6 +146,14 @@
         text-decoration: none;
         &:hover{
             color:$color-orange;
+        }
+    }
+    &__social-media{
+        @include respond('phone-med'){
+            width:3.4rem;
+        }
+        @include respond('phone-sm-sm'){
+            width: 2.7rem;
         }
     }
     &__button{
