--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $color-purple: rgb(47, 44, 150);
 $color-purple-transparent: rgba(47, 44, 150, 0.534);
 $color-black-transparent: rgba(0, 0, 0, 0.466);
 $color-black-transparent-text: rgba(35, 36, 39, 0.40);
+$color-light-transparent: #fff7e1b7;
 
 $color-white:#FFF;
 
