--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -86,3 +86,16 @@
 .u-margin-top-mid{
     margin-top:10rem !important;
 }
+.u-margin-top-lg{
+    margin-top:18rem !important;
+}
+.u-margin-bottom-mid{
+    margin-bottom:10rem;
+}
+.u-padding-top-btm-async{
+    padding-top:4rem;
+    padding-bottom:2rem;
+}
+.u-border-top-green{
+    border-top:2px solid $color-green;
+}
