--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -22,6 +22,17 @@
         max-width: 56rem;
     }
     &__logo{
+        position:relative;
+        z-index:50;
+        @include respond('tab-land'){
+            height: 7rem;
+        }
+        @include respond('phone'){
+            height: 6rem;
+        }
+        @include respond('phone-med'){
+            height: 5rem;
+        }
         &-img{
             @include respond('tab-land'){
                 height: 7rem;
