--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,20 +4,17 @@
     padding-bottom:10rem;
 
     &__overflow-container{
-        overflow:hidden;
-
+        display: inline-block;
+        //overflow:hidden;
+        //transform: translateY(100%);
+        position:absolute;
+        top:0;
+        right:0;
         &--wave{
-            position:absolute;
-            top:0;
-            right:0;
-            z-index:5;
-            top:-10%;
-            @include respond('tab-land'){
-                top:-15%;
-            }
-            @include respond('phone'){
-                top:-10%;
-            }
+            display: inline-block;
+            // position:absolute;
+            // bottom:-30%;
+            // right:0;
         }            
     }
     &__wave{
