--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -1,5 +1,6 @@
 .blog{
     .header{
+        overflow: visible;
         background-color:$color-green;
         padding-top:2rem;
         padding-bottom:7rem;
