--- a/sass/pages/_testimonials.scss
+++ b/sass/pages/_testimonials.scss
@@ -1,5 +1,6 @@
 .testimonials {
     .header {
+        overflow: visible;
         position: relative;
         background-color: $color-green;
         padding-top: 5rem;
