--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,5 +1,6 @@
 .contact{
     .header{
+        overflow: visible;
         background-color: $color-green;
         padding-top:2rem;
         padding-bottom:7rem;
