--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -1,5 +1,6 @@
 .portfolio{
     .header{
+        overflow: visible;
         position:relative;
         background-color: $color-green;
         padding-top:5rem;
