--- a/sass/pages/_services.scss
+++ b/sass/pages/_services.scss
@@ -9,6 +9,7 @@
         z-index: -1;
     }
     .header{
+        overflow: visible;
         position:relative;
         padding:5rem 10rem 15rem 10rem;
         z-index: $z-content-layer;
